Web Socket and sound alert for manage orders screen (cha-ching cash register sound)