@@ -3,8 +3,6 @@ package com.bistro_template_backend.config;
 import com.bistro_template_backend.utils.JwtFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.ProviderManager;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -15,6 +13,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -33,18 +32,21 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/**").permitAll()  // Allow login endpoint
-                        .requestMatchers("/api/admin/**").hasRole("ADMIN")  // Use hasRole without ROLE_ prefix
-                        .requestMatchers("/api/menu/**").permitAll()  // Allow public menu endpoints (featured items)
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers("/api/menu/**").permitAll()
                         .requestMatchers("/api/orders/**").permitAll()
                         .requestMatchers("/api/categories/**").permitAll()
-                        .anyRequest().authenticated()  // Secure everything else
+                        // **WebSocket endpoints - these are the key ones**
+                        .requestMatchers("/ws-orders/**").permitAll()  // SockJS endpoints
+                        .requestMatchers("/api/websocket/**").permitAll()  // Test endpoints
+                        .requestMatchers("/api/test/**").permitAll()
+                        .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
-
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -54,10 +56,23 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
+
+        // **FIXED: Allow specific origins and handle credentials properly**
+//        configuration.setAllowedOriginPatterns(Arrays.asList(
+//                "http://localhost:*",
+//                "http://127.0.0.1:*",
+//                "http://localhost:5173",
+//                "http://localhost:3000"
+//        ));
         configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+
+        // **IMPORTANT: Allow credentials for SockJS but make it explicit**
 //        configuration.setAllowCredentials(true);
+
+        // **Set max age for preflight requests**
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
